--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ Result: ${result} ||`;
 
     </div>
     
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
     
 </body>
 
